--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM83B+DT7QRMy3nQCOZGC9L",
+      "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
+      "authorship_tag": "ABX9TyO4vzyxcnPr6F5LOEUgtR4k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "U7UuaYXYLYjL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "23037b5a-bcad-4b61-fdd3-4b6690aaec27"
+        "outputId": "29c4a5db-6030-4022-9a21-343e3a1ed30c"
       },
       "outputs": [
         {
@@ -65,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "98bp9Wvliqfw",
-        "outputId": "78c2922c-230d-4021-8d8b-0100ac4be268"
+        "outputId": "8f456a46-498c-4ffa-f567-181593cf7976"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,13 +97,109 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Loading the dataset"
+      ],
       "metadata": {
-        "id": "s2XRcsdHrIMg"
+        "id": "UPVUUeXcPGwV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#Data Manipulation and Exploration\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import re\n",
+        "# Mount Google Drive (if the file is there)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "file_path = '/content/drive/MyDrive/fake_news_dataset.csv'\n",
+        "\n",
+        "df = pd.read_csv(file_path)\n",
+        "print(df.head())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s2XRcsdHrIMg",
+        "outputId": "0473f30b-34f4-41a2-ba19-69102e63a773"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "                                  title  \\\n",
+            "0               Foreign Democrat final.   \n",
+            "1   To offer down resource great point.   \n",
+            "2          Himself church myself carry.   \n",
+            "3                  You unit its should.   \n",
+            "4  Billion believe employee summer how.   \n",
+            "\n",
+            "                                                text        date    source  \\\n",
+            "0  more tax development both store agreement lawy...  2023-03-10  NY Times   \n",
+            "1  probably guess western behind likely next inve...  2022-05-25  Fox News   \n",
+            "2  them identify forward present success risk sev...  2022-09-01       CNN   \n",
+            "3  phone which item yard Republican safe where po...  2023-02-07   Reuters   \n",
+            "4  wonder myself fact difficult course forget exa...  2023-04-03       CNN   \n",
+            "\n",
+            "                 author    category label  \n",
+            "0          Paula George    Politics  real  \n",
+            "1           Joseph Hill    Politics  fake  \n",
+            "2        Julia Robinson    Business  fake  \n",
+            "3  Mr. David Foster DDS     Science  fake  \n",
+            "4         Austin Walker  Technology  fake  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\nDataset Info:\")\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zI9PpsgdOqwG",
+        "outputId": "046fc6e6-0efc-4461-ad9b-bd9b769f3bf4"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Dataset Info:\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 20000 entries, 0 to 19999\n",
+            "Data columns (total 7 columns):\n",
+            " #   Column    Non-Null Count  Dtype \n",
+            "---  ------    --------------  ----- \n",
+            " 0   title     20000 non-null  object\n",
+            " 1   text      20000 non-null  object\n",
+            " 2   date      20000 non-null  object\n",
+            " 3   source    19000 non-null  object\n",
+            " 4   author    19000 non-null  object\n",
+            " 5   category  20000 non-null  object\n",
+            " 6   label     20000 non-null  object\n",
+            "dtypes: object(7)\n",
+            "memory usage: 1.1+ MB\n"
+          ]
+        }
+      ]
     }
   ]
 }
