feat: imputation, preliminary data inspection and cleaning

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyO4vzyxcnPr6F5LOEUgtR4k",
+      "authorship_tag": "ABX9TyPfgARr4Pt2E0hFCirOjh/t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "U7UuaYXYLYjL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "29c4a5db-6030-4022-9a21-343e3a1ed30c"
+        "outputId": "5c7ce418-b45d-42a0-d008-ac846a38ecb0"
       },
       "outputs": [
         {
@@ -66,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "98bp9Wvliqfw",
-        "outputId": "8f456a46-498c-4ffa-f567-181593cf7976"
+        "outputId": "e0d65eef-9b1c-4ba2-d8b9-9a8ba72aabb1"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Loading the dataset"
+        "# Loading the dataset"
       ],
       "metadata": {
         "id": "UPVUUeXcPGwV"
@@ -129,9 +129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2XRcsdHrIMg",
-        "outputId": "0473f30b-34f4-41a2-ba19-69102e63a773"
+        "outputId": "4bd14dab-20e0-4573-d1c6-9e181342d116"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zI9PpsgdOqwG",
-        "outputId": "046fc6e6-0efc-4461-ad9b-bd9b769f3bf4"
+        "outputId": "8e4682e0-f4b5-4fff-8efd-b8ffb94e6674"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,6 +200,183 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import libraries\n",
+        "#Natural Language Processing (Text Cleaning and Preprocessing)\n",
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.stem.porter import PorterStemmer\n",
+        "\n",
+        "#Machine Learning (Feature Extraction and Models)\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.linear_model import PassiveAggressiveClassifier\n",
+        "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+        "\n",
+        "#Downloard NLTK resources\n",
+        "nltk.download('stopwords')\n"
+      ],
+      "metadata": {
+        "id": "-aqUv-7YQATj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8426ae9a-2d3a-4e02-ecec-b0d99b4ca3ae"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Preliminary Data Inspection"
+      ],
+      "metadata": {
+        "id": "_7C34RcnbiZ0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check the total number of rows and columns\n",
+        "print(f\"\\nTotal rows and columns: {df.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fWxM7hYVa__V",
+        "outputId": "b004dba2-4b58-4d6c-d90b-60d54983a7fc"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Total rows and columns: (20000, 7)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check for missing values in each column\n",
+        "print(\"\\nMissing values per column:\")\n",
+        "print(df.isnull().sum())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s35Ts_6bcHWK",
+        "outputId": "6c5ca52b-90e8-4041-f7d2-2f4d46d1df2f"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Missing values per column:\n",
+            "title          0\n",
+            "text           0\n",
+            "date           0\n",
+            "source      1000\n",
+            "author      1000\n",
+            "category       0\n",
+            "label          0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# imputation (Handling Missing Vlaues)"
+      ],
+      "metadata": {
+        "id": "90dgiGrjdy50"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Fill Nan values in 'author' and 'source' columns with 'Unknow'\n",
+        "df['author'] = df['author'].fillna('Unknow')\n",
+        "df['source'] = df['source'].fillna('Unknow')\n",
+        "\n",
+        "#Re-check for nulls to confirm\n",
+        "print(\"\\nMissing values after imputation:\")\n",
+        "print(df.isnull().sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VVo9h3OZd2Un",
+        "outputId": "40015d3c-7dcf-4533-a19e-ccd47b872817"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Missing values after imputation:\n",
+            "<bound method DataFrame.sum of        title   text   date  source  author  category  label\n",
+            "0      False  False  False   False   False     False  False\n",
+            "1      False  False  False   False   False     False  False\n",
+            "2      False  False  False   False   False     False  False\n",
+            "3      False  False  False   False   False     False  False\n",
+            "4      False  False  False   False   False     False  False\n",
+            "...      ...    ...    ...     ...     ...       ...    ...\n",
+            "19995  False  False  False   False   False     False  False\n",
+            "19996  False  False  False   False   False     False  False\n",
+            "19997  False  False  False   False   False     False  False\n",
+            "19998  False  False  False   False   False     False  False\n",
+            "19999  False  False  False   False   False     False  False\n",
+            "\n",
+            "[20000 rows x 7 columns]>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nHnnc_i8ga0U"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
