feat : text tokenization

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyMCRcuHy/ex8xhxNNDbFirk",
+      "authorship_tag": "ABX9TyMorN6e1WPWr/wIqqVRN330",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -489,106 +489,66 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Text Preprocessing and Tokenization"
+      ],
+      "metadata": {
+        "id": "kL_AZ4qvHlQu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
         "import re\n",
-        "import nltk\n",
-        "from nltk.corpus import stopwords\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
-        "# Ensure NLTK resources are available\n",
-        "try:\n",
-        "    nltk.data.find('corpora/stopwords')\n",
-        "except nltk.downloader.DownloadError:\n",
-        "    nltk.download('stopwords')\n",
-        "\n",
-        "# Load the data\n",
-        "file_path = 'fake_news_dataset.csv'\n",
-        "df = pd.read_csv(file_path)\n",
-        "\n",
-        "# --- Re-run Preprocessing Steps to ensure data is ready ---\n",
-        "df['author'] = df['author'].fillna('Unknown')\n",
-        "df['source'] = df['source'].fillna('Unknown')\n",
-        "df['full_text'] = df['title'] + ' ' + df['text']\n",
-        "df['label'] = df['label'].map({'fake': 1, 'real': 0})\n",
-        "# ---------------------------------------------------------\n",
-        "\n",
-        "# 1. Text Cleaning Function\n",
-        "english_stopwords = set(stopwords.words('english'))\n",
-        "\n",
+        "# 1. Define the Cleaning Function\n",
+        "# We rely on the TfidfVectorizer's built-in 'stop_words' functionality later,\n",
+        "# so we only perform essential cleaning here:\n",
         "def clean_text(text):\n",
         "    # Convert text to lowercase\n",
         "    text = text.lower()\n",
         "\n",
-        "    # Remove special characters, numbers, and punctuation (keep only letters)\n",
-        "    text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
+        "    # Remove special characters, numbers, and punctuation (keep only letters and spaces)\n",
+        "    # Replaces anything that is NOT a letter or a space with a single space.\n",
+        "    text = re.sub(r'[^a-zA-Z\\s]', ' ', text)\n",
         "\n",
-        "    # Tokenize (split into words) and remove stop words\n",
-        "    words = text.split()\n",
-        "    words = [word for word in words if word not in english_stopwords and len(word) > 1]\n",
+        "    # Replace multiple spaces with a single space and trim surrounding whitespace\n",
+        "    text = re.sub(r'\\s+', ' ', text).strip()\n",
         "\n",
-        "    # Join the words back into a single string\n",
-        "    text = ' '.join(words)\n",
-        "    return text\n",
+        "    # Filter out single-character words (like 'a' or 'i' if they somehow survived stop word removal)\n",
+        "    words = [word for word in text.split() if len(word) > 1]\n",
+        "\n",
+        "    return ' '.join(words)\n",
         "\n",
         "# Apply the cleaning function to the 'full_text' column\n",
         "df['cleaned_text'] = df['full_text'].apply(clean_text)\n",
         "\n",
-        "print(\"--- Text Cleaning Result (First Row) ---\")\n",
-        "print(f\"Original (Snippet): {df['full_text'].iloc[0][:150]}...\")\n",
-        "print(f\"Cleaned (Snippet): {df['cleaned_text'].iloc[0][:150]}...\\n\")\n",
-        "\n",
-        "\n",
-        "# 2. Data Splitting and Feature Engineering (TF-IDF)\n",
-        "X = df['cleaned_text']\n",
-        "y = df['label']\n",
-        "\n",
-        "# Split the data into Training and Testing sets (80% train, 20% test)\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-        "\n",
-        "print(f\"Training set size: {X_train.shape[0]} samples\")\n",
-        "print(f\"Testing set size: {X_test.shape[0]} samples\\n\")\n",
-        "\n",
-        "# 3. Initialize the TF-IDF Vectorizer\n",
-        "# We use ngram_range=(1, 2) to include features for single words and two-word phrases\n",
-        "tfidf_vectorizer = TfidfVectorizer(max_df=0.7, min_df=5, ngram_range=(1, 2))\n",
-        "\n",
-        "# 4. Fit and Transform (Fit only on Training Data!)\n",
-        "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
-        "X_test_tfidf = tfidf_vectorizer.transform(X_test)\n",
-        "\n",
-        "print(\"--- TF-IDF Feature Matrix Shapes ---\")\n",
-        "print(f\"X_train_tfidf shape: {X_train_tfidf.shape}\")\n",
-        "print(f\"X_test_tfidf shape: {X_test_tfidf.shape}\")\n",
-        "print(f\"Number of extracted features (Vocabulary Size): {len(tfidf_vectorizer.get_feature_names_out())}\")"
+        "print(\"--- Text Cleaning Applied ---\")\n",
+        "print(f\"Original Text Sample: {df['full_text'].iloc[0][:100]}...\")\n",
+        "print(f\"Cleaned Text Sample: {df['cleaned_text'].iloc[0][:100]}...\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 790
+          "height": 245
         },
-        "id": "xVBfOuCPGYS7",
-        "outputId": "119877b9-0797-4b3e-dd10-30fc3bb96550"
+        "id": "YjWpjxTcHkLA",
+        "outputId": "383bfe4f-0eaf-4eba-a97c-a47a441660f7"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "module 'nltk.downloader' has no attribute 'DownloadError'",
+          "ename": "NameError",
+          "evalue": "name 'df' is not defined",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1182513839.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'corpora/stopwords'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownloader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDownloadError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/nltk/data.py\u001b[0m in \u001b[0;36mfind\u001b[0;34m(resource_name, paths)\u001b[0m\n\u001b[1;32m    578\u001b[0m     \u001b[0mresource_not_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"\\n{sep}\\n{msg}\\n{sep}\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mLookupError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresource_not_found\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    580\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mLookupError\u001b[0m: \n**********************************************************************\n  Resource \u001b[93mstopwords\u001b[0m not found.\n  Please use the NLTK Downloader to obtain the resource:\n\n  \u001b[31m>>> import nltk\n  >>> nltk.download('stopwords')\n  \u001b[0m\n  For more information see: https://www.nltk.org/data.html\n\n  Attempted to load \u001b[93mcorpora/stopwords\u001b[0m\n\n  Searched in:\n    - '/root/nltk_data'\n    - '/usr/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************\n",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1182513839.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'corpora/stopwords'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mexcept\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownloader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDownloadError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'stopwords'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'nltk.downloader' has no attribute 'DownloadError'"
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1508900596.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# Apply the cleaning function to the 'full_text' column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cleaned_text'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'full_text'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"--- Text Cleaning Applied ---\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
           ]
         }
       ]
