feat : Text Cleaning Applied

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyMorN6e1WPWr/wIqqVRN330",
+      "authorship_tag": "ABX9TyPRoD42ZLjiWMNpUgjlrVm4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "U7UuaYXYLYjL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c7ce418-b45d-42a0-d008-ac846a38ecb0"
+        "outputId": "a5c2d816-9206-49f9-8348-e5a7a5ebaa38"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
           "text": [
             "Requirement already satisfied: nltk in /usr/local/lib/python3.12/dist-packages (3.9.1)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from nltk) (8.3.1)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.2)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.3)\n",
             "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.12/dist-packages (from nltk) (2025.11.3)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from nltk) (4.67.1)\n"
           ]
@@ -66,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "98bp9Wvliqfw",
-        "outputId": "e0d65eef-9b1c-4ba2-d8b9-9a8ba72aabb1"
+        "outputId": "30b8a13d-d889-40f0-c6b5-548b24f6b1f9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,9 +129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2XRcsdHrIMg",
-        "outputId": "4bd14dab-20e0-4573-d1c6-9e181342d116"
+        "outputId": "61d2e7ee-5486-4c4e-86f9-ed36021abf86"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zI9PpsgdOqwG",
-        "outputId": "8e4682e0-f4b5-4fff-8efd-b8ffb94e6674"
+        "outputId": "f33b66f3-4871-4f75-953b-04fc7e22b1ec"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,9 +224,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8426ae9a-2d3a-4e02-ecec-b0d99b4ca3ae"
+        "outputId": "6ad1263c-956a-4cbc-b9b4-2fe346ed4353"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -268,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fWxM7hYVa__V",
-        "outputId": "b004dba2-4b58-4d6c-d90b-60d54983a7fc"
+        "outputId": "a02204a7-f6d2-40eb-a600-8cce5a542ff5"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,9 +294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s35Ts_6bcHWK",
-        "outputId": "6c5ca52b-90e8-4041-f7d2-2f4d46d1df2f"
+        "outputId": "bc92a6e7-49d7-4a7c-9549-17d0885cf176"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,9 +341,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VVo9h3OZd2Un",
-        "outputId": "40015d3c-7dcf-4533-a19e-ccd47b872817"
+        "outputId": "23e2d8af-ab81-4daf-952e-f1a8ac2af869"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,9 +398,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nHnnc_i8ga0U",
-        "outputId": "4b2c52de-a3c1-4a90-f963-ac89d581427c"
+        "outputId": "8ec56cc5-7c7c-4d35-890b-5a9cc3665e9b"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,9 +439,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5o23xlltk5Wg",
-        "outputId": "9450912c-afb5-4636-81d8-90c6c8a8dd42"
+        "outputId": "e306a0c7-a31a-41dd-96c3-7b7a47fe323e"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,9 +472,9 @@
           "height": 410
         },
         "id": "rZL06f7MlfF1",
-        "outputId": "c317ad42-f9fe-4126-ee11-8f0eccf9eb9c"
+        "outputId": "ae7a460d-332b-42f5-8d00-6bcc86706f82"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -504,51 +504,51 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
-        "# 1. Define the Cleaning Function\n",
-        "# We rely on the TfidfVectorizer's built-in 'stop_words' functionality later,\n",
-        "# so we only perform essential cleaning here:\n",
+        "# 1. Define the Cleaning function\n",
+        "# we rely on the TfidVectorizer's built-in 'stop_words' functionality later,\n",
+        "# so we only perform essential cleaning here.\n",
+        "\n",
         "def clean_text(text):\n",
-        "    # Convert text to lowercase\n",
-        "    text = text.lower()\n",
+        "  #convert text to lowercase\n",
+        "  text = text.lower()\n",
         "\n",
-        "    # Remove special characters, numbers, and punctuation (keep only letters and spaces)\n",
-        "    # Replaces anything that is NOT a letter or a space with a single space.\n",
-        "    text = re.sub(r'[^a-zA-Z\\s]', ' ', text)\n",
+        "  # Remove special characters, numbers, and punctuation (keep only letters and spaces)\n",
+        "  # Replace anything that is NOT a letter or a space with a single space\n",
+        "  text = re.sub(r'[^a-zA-Z\\s]', ' ', text)\n",
         "\n",
-        "    # Replace multiple spaces with a single space and trim surrounding whitespace\n",
-        "    text = re.sub(r'\\s+', ' ', text).strip()\n",
+        "  # Replace multiple spaces with a single space and trim surrounding whitespace\n",
+        "  text = re.sub(r'\\s+', ' ', text).strip()\n",
         "\n",
-        "    # Filter out single-character words (like 'a' or 'i' if they somehow survived stop word removal)\n",
-        "    words = [word for word in text.split() if len(word) > 1]\n",
+        "  # Filter out single-character word (like 'a' or 'i' if they somehow survived stop word removal)\n",
+        "  words = [word for word in text.split() if len(word) > 1]\n",
         "\n",
-        "    return ' '.join(words)\n",
+        "  return ' '.join(words)\n",
         "\n",
         "# Apply the cleaning function to the 'full_text' column\n",
         "df['cleaned_text'] = df['full_text'].apply(clean_text)\n",
         "\n",
         "print(\"--- Text Cleaning Applied ---\")\n",
         "print(f\"Original Text Sample: {df['full_text'].iloc[0][:100]}...\")\n",
-        "print(f\"Cleaned Text Sample: {df['cleaned_text'].iloc[0][:100]}...\\n\")"
+        "print(f\"Cleaned Text Sample: {df['cleaned_text'].iloc[0][:100]}...\")\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
+        "id": "mxCMiS_6IKtl",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "YjWpjxTcHkLA",
-        "outputId": "383bfe4f-0eaf-4eba-a97c-a47a441660f7"
+        "outputId": "5bee089c-2564-416b-f689-08a717de1fd6"
       },
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'df' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1508900596.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# Apply the cleaning function to the 'full_text' column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cleaned_text'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'full_text'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"--- Text Cleaning Applied ---\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Text Cleaning Applied ---\n",
+            "Original Text Sample: Foreign Democrat final. more tax development both store agreement lawyer hear outside continue reach...\n",
+            "Cleaned Text Sample: foreign democrat final more tax development both store agreement lawyer hear outside continue reach ...\n"
           ]
         }
       ]
