feat : Data splitting

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyPRoD42ZLjiWMNpUgjlrVm4",
+      "authorship_tag": "ABX9TyNbhuknpCq+tJswPifi2Sb4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -549,6 +549,52 @@
             "--- Text Cleaning Applied ---\n",
             "Original Text Sample: Foreign Democrat final. more tax development both store agreement lawyer hear outside continue reach...\n",
             "Cleaned Text Sample: foreign democrat final more tax development both store agreement lawyer hear outside continue reach ...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Splitting (Train-Test Split)"
+      ],
+      "metadata": {
+        "id": "Rbb0qlL__uFc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df['cleaned_text']\n",
+        "y = df['label']\n",
+        "\n",
+        "# Split the data, ensuring the label distribution is maintained (stratify=y)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+        "\n",
+        "print(\"--- Data Splitting Complete ---\")\n",
+        "print(f\"Total sample: {len(X)}\")\n",
+        "print(f\"Training samples: {len(X_train)}\")\n",
+        "print(f\"Testing samples: {len(X_test)}\\n\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mWgZ7hky_zC-",
+        "outputId": "7736920a-c41f-491a-fbc5-6152bbbf1b45"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Data Splitting Complete ---\n",
+            "Total sample: 20000\n",
+            "Training samples: 16000\n",
+            "Testing samples: 4000\n",
+            "\n"
           ]
         }
       ]
