feat: feature selection

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyNbhuknpCq+tJswPifi2Sb4",
+      "authorship_tag": "ABX9TyOwdN00i1wmC76LkAtS9sc/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -538,9 +538,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5bee089c-2564-416b-f689-08a717de1fd6"
+        "outputId": "116ca5e1-a3ed-4de5-a73f-317762a63bc2"
       },
-      "execution_count": 21,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,6 +598,32 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Feature Engineering (TF-IDF Vectorization)"
+      ],
+      "metadata": {
+        "id": "sGUCvYWxGzSa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Intialize the TF-IDF Vectorizer\n",
+        "tfidf_vectorizer = TfidfVectorizer(\n",
+        "    max_df=0.7,\n",
+        "    min_df=5,\n",
+        "    ngram_range=(1, 2),\n",
+        "    stop_words='english'\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "99kM34jtG-S_"
+      },
+      "execution_count": 24,
+      "outputs": []
     }
   ]
 }
