--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyOwdN00i1wmC76LkAtS9sc/",
+      "authorship_tag": "ABX9TyMx680drHDSQ+i+FRXhihGS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "U7UuaYXYLYjL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a5c2d816-9206-49f9-8348-e5a7a5ebaa38"
+        "outputId": "2f14e12c-8b6b-4218-fa29-271f022feffd"
       },
       "outputs": [
         {
@@ -66,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "98bp9Wvliqfw",
-        "outputId": "30b8a13d-d889-40f0-c6b5-548b24f6b1f9"
+        "outputId": "4321b043-a9d9-4172-c9ac-2eebc3ba7f3f"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,9 +129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2XRcsdHrIMg",
-        "outputId": "61d2e7ee-5486-4c4e-86f9-ed36021abf86"
+        "outputId": "06fda781-70e1-4f16-8a5c-b7a8d748026e"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zI9PpsgdOqwG",
-        "outputId": "f33b66f3-4871-4f75-953b-04fc7e22b1ec"
+        "outputId": "369126bf-aa36-4f44-c9cc-831fe2aaafc0"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,9 +224,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6ad1263c-956a-4cbc-b9b4-2fe346ed4353"
+        "outputId": "76a9a5d3-2229-4058-9481-4287baa4c21d"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -268,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fWxM7hYVa__V",
-        "outputId": "a02204a7-f6d2-40eb-a600-8cce5a542ff5"
+        "outputId": "ccd95f07-3b28-41d4-ce6d-6b6464cb863d"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,9 +294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s35Ts_6bcHWK",
-        "outputId": "bc92a6e7-49d7-4a7c-9549-17d0885cf176"
+        "outputId": "5cdfcccd-644a-4d97-da6b-1c4df92f1afb"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,9 +341,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VVo9h3OZd2Un",
-        "outputId": "23e2d8af-ab81-4daf-952e-f1a8ac2af869"
+        "outputId": "cb9a5bca-4673-49b3-982a-9e5517555461"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,9 +398,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nHnnc_i8ga0U",
-        "outputId": "8ec56cc5-7c7c-4d35-890b-5a9cc3665e9b"
+        "outputId": "e06e17b7-989a-4702-ce98-f58d7ba8283a"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,9 +439,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5o23xlltk5Wg",
-        "outputId": "e306a0c7-a31a-41dd-96c3-7b7a47fe323e"
+        "outputId": "50206830-9eff-407e-c3a3-916e40fe8c1c"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,9 +472,9 @@
           "height": 410
         },
         "id": "rZL06f7MlfF1",
-        "outputId": "ae7a460d-332b-42f5-8d00-6bcc86706f82"
+        "outputId": "9e11603b-a567-4971-cf14-be3d98f9500e"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -538,9 +538,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "116ca5e1-a3ed-4de5-a73f-317762a63bc2"
+        "outputId": "a3d05a13-36e2-48fd-8832-1024e3015820"
       },
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,9 +582,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mWgZ7hky_zC-",
-        "outputId": "7736920a-c41f-491a-fbc5-6152bbbf1b45"
+        "outputId": "dbef86ea-695b-4efe-9226-dae628d7c45c"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,16 +613,27 @@
       "source": [
         "# 1. Intialize the TF-IDF Vectorizer\n",
         "tfidf_vectorizer = TfidfVectorizer(\n",
-        "    max_df=0.7,\n",
-        "    min_df=5,\n",
-        "    ngram_range=(1, 2),\n",
-        "    stop_words='english'\n",
-        ")\n"
+        "    max_df=0.7,  # Ignore terms that appear in more than 70% of documents (too common)\n",
+        "    min_df=5,    # Ignore terms that appear in less than 5 documents (too rare/noise)\n",
+        "    ngram_range=(1, 2), # Use single words (unigrams) AND two-word phrases (bigrams)\n",
+        "    stop_words='english' # Use Scikit-learn's built-in stop word list\n",
+        ")\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "99kM34jtG-S_"
       },
-      "execution_count": 24,
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nC3YyX11fV9o"
+      },
+      "execution_count": 15,
       "outputs": []
     }
   ]
