feat : Apply the vocabulary learned from X_train to the test data

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyMx680drHDSQ+i+FRXhihGS",
+      "authorship_tag": "ABX9TyOcPJSo0nmi3YaaxPFx0Wbp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -629,11 +629,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 2. Fit and Transform (CRITICAL step: Fit only on Training Data!)\n",
+        "# .fit() learns the vocabulary from X_train\n",
+        "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n"
+      ],
       "metadata": {
         "id": "nC3YyX11fV9o"
       },
-      "execution_count": 15,
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3. Transform (Apply the vocabulary learned from X_train to the test data)\n",
+        "X_test_tfidf = tfidf_vectorizer.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "j2s5KByIgmgT"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
