feat : Passive Aggressive Classifier, (1)Passive: If the model sees a news article and correctly identifies it (e.g., correctly says it's "Fake"), it stays passive. It doesn't change its internal rules because it's already doing a good job. (2)Aggressive: If the model makes a mistake (e.g., says an article is "Real" when it was actually "Fake"), it becomes aggressive. It makes a huge, sudden adjustment to its internal mathematical weights to ensure it doesn't make that same mistake again.

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyOcPJSo0nmi3YaaxPFx0Wbp",
+      "authorship_tag": "ABX9TyObE65+kLMh1s7y+vrta2Hu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -648,6 +648,66 @@
       ],
       "metadata": {
         "id": "j2s5KByIgmgT"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"--- TF-IDF Vectorization Complete ---\")\n",
+        "print(f\"X_train_tfidf shape: {X_train_tfidf.shape}\")\n",
+        "print(f\"X_test_tfidf shape: {X_test_tfidf.shape}\")\n",
+        "print(f\"Vocabulary size (number of features): {len(tfidf_vectorizer.get_feature_names_out())}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LuT6TCP2g5_v",
+        "outputId": "48f608cc-907c-481f-880f-b8e4b971dfee"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- TF-IDF Vectorization Complete ---\n",
+            "X_train_tfidf shape: (16000, 374515)\n",
+            "X_test_tfidf shape: (4000, 374515)\n",
+            "Vocabulary size (number of features): 374515\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Development and Training"
+      ],
+      "metadata": {
+        "id": "DJHZLv8Fhu-z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import PassiveAggressiveClassifier\n",
+        "\n",
+        "# 1. Initialize the Model\n",
+        "# 'max_iter' is how many times the model scans the data (50 is usually enough)\n",
+        "# 'random_state' ensures you and I get the same results\n",
+        "pac_model = PassiveAggressiveClassifier(max_iter=50, random_state=42)\n",
+        "\n",
+        "# 2. Training (The Learning Step)\n",
+        "# We give it the training features (X) and the correct answers (y)\n",
+        "pac_model.fit(X_train_tfidf, y_train)\n",
+        "\n",
+        "print(\"Training Complete! The model has finished learning from the 16,000 articles.\")"
+      ],
+      "metadata": {
+        "id": "1fAFtrVVhPuj"
       },
       "execution_count": null,
       "outputs": []
